# raycast-extensions

./: .gitignore  SECURITY.md
.github/: CODEOWNERS  extensionName2Folder.json  public_raycast_extensions.txt  raycast2github.json
.github/ISSUE_TEMPLATE/: extension_bug_report.yml  extension_feature_request.yml
.github/workflows/: extensions_build_publish.yml  generate-code-owners.yml  generate-docs.yml  issue-bot.yml  metadata_image_enforcer.yml  npm_check.yml  pr-bot.yml  pull_request_ensure_maintainer_can_modify.yml  pull_request_merge.yml  stale.yml  sync-api-docs.yml  sync-utils-docs.yml  update-extension-label.yml
docs/: .config.json  changelog.md
docs/ai/: getting-started.md  learn-core-concepts-of-ai-extensions.md
docs/api-reference/: ai.md
docs/basics/: prepare-an-extension-for-store.md
docs/information/: manifest.md
docs/utils-reference/: getting-started.md
examples/todo-list/: .gitignore
extensions/0x0/: package-lock.json
extensions/1-click-confetti/: package-lock.json
extensions/1bookmark/: CHANGELOG.md  package-lock.json  package.json
extensions/1loc/: package-lock.json
extensions/1password/: CHANGELOG.md  package-lock.json  package.json
extensions/2fa-directory/: package-lock.json
extensions/2fas-authenticator/: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.json
extensions/40-questions/: package-lock.json
extensions/42-api/: CHANGELOG.md  README.md  eslint.config.js  package-lock.json  package.json
extensions/5devs/: package-lock.json  package.json
extensions/8-divide/: package-lock.json
extensions/8ball/: package-lock.json
extensions/Bilibili/: package-lock.json
extensions/CodeBlocks/: .gitignore  package-lock.json
extensions/Splitwise/: package-lock.json
extensions/aave-search/: CHANGELOG.md  package-lock.json  package.json
extensions/ableton-live/: package-lock.json
extensions/abstract-api/: CHANGELOG.md  package-lock.json  package.json
extensions/accordance/: package-lock.json
extensions/acqua/: package-lock.json
extensions/active-mississaugua/: package-lock.json
extensions/adb/: package-lock.json
extensions/adguard-home/: .gitignore  package-lock.json
extensions/adhan-time/: .gitignore  (+1 more)
extensions/clean-keyboard/rust/clean-keyboard/: Cargo.toml
extensions/clean-keyboard/rust/clean-keyboard/src/: clean_keyboard.rs
extensions/color-picker/rust/color-picker/: Cargo.toml
extensions/color-picker/rust/color-picker/src/: color_picker.rs
extensions/color-picker/rust/color-picker/src/lib/: colors.rs  cursor.rs  mod.rs
extensions/color-picker/rust/extract-color/: Cargo.toml
extensions/color-picker/rust/extract-color/src/: extract-color.rs
extensions/lunaris/rust/: Cargo.toml
extensions/lunaris/rust/src/: main.rs
scripts/: check_metadata_images.py  check_raycast_images.py  update-raycast-gitignores.js
templates/: package-lock.json
(+14283 files in other folders)
